--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,41 +33,37 @@ build-backend = "poetry.core.masonry.api"
 # Python packaging and dependency management.
 # Docs: https://python-poetry.org/docs/
 [tool.poetry]
-name = "django-channels-graphql-ws"
-version = "v1.0.0rc7"
+name = "django-channels-graphql-ws-next"
+version = "1.0.1"
 description = """Django Channels based WebSocket GraphQL server with Graphene-like subscriptions"""
-authors = ["Alexander A. Prokhorov <alexander.prokhorov@datadvance.net>"]
-homepage = "https://github.com/datadvance/DjangoChannelsGraphqlWs"
-repository = "https://github.com/datadvance/DjangoChannelsGraphqlWs"
+authors = ["Mohammad Hasan Mohammad Khani"]
+homepage = "https://github.com/MHMK2002/DjangoChannelsGraphqlWs"
+repository = "https://github.com/MHMK2002/DjangoChannelsGraphqlWs"
 license = "MIT"
 packages = [{ include = "channels_graphql_ws/" }]
 
 # Production dependencies.
 # Version syntax: https://python-poetry.org/docs/dependency-specification/
 [tool.poetry.dependencies]
-python = "^3.8.0"
-aiohttp = "^3"
+python = ">=3.10,<4"
+aiohttp = "^3.13"
 asgiref = "^3"
 channels = "^4"
-Django = "^4"
+Django = "^5"
 graphene = "^3"
-graphql-core = "3.2.3" # Carefully test after upgrade, since we path private internals.
+graphql-core = "3.2.6" # Carefully test after upgrade, since we path private internals.
 msgpack = "^1"
 
 # Development dependencies.
 # Version syntax: https://python-poetry.org/docs/dependency-specification/
 [tool.poetry.group.dev.dependencies]
-black = { version = "*" }
+ruff = "*"
 channels = { version = "^4", extras = ["daphne"] }
 channels-redis = "*"
 coverage = "*"
 graphene-django = "*"
-isort = { version = "*", extras = ["pyproject"] }
 mypy = "*"
 plumbum = "*"
-pylint = "*"
-pylint-django = "*"
-pylint-quotes = "*"
 pytest = "*"
 pytest-asyncio = "*"
 pytest-cov = "*"
@@ -76,75 +72,63 @@ pytest-pythonpath = "*"
 pytest-xdist = "*"
 tox = "*"
 
-# ---------------------------------------------------------------- BLACK
-# Black - the uncompromising code formatter.
-# https://black.readthedocs.io/en/stable/index.html
-[tool.black]
-target-version = ['py38', 'py39', 'py310']
+# ----------------------------------------------------------------- RUFF
+# Ruff - an extremely fast Python linter and formatter.
+# Docs: https://docs.astral.sh/ruff/
+[tool.ruff]
+line-length = 120
+indent-width = 4
 
-# ---------------------------------------------------------------- ISORT
-# Isort configuration.
-# Docs: https://github.com/timothycrosley/isort/wiki/isort-Settings
-[tool.isort]
-profile = "black"
+exclude = [
+    ".eggs",
+    ".git",
+    ".venv",
+    "build",
+    "dist",
+    "migrations",
+]
 
-# --------------------------------------------------------------- PYLINT
-# Pylint code checker configuration.
-# - Pylint docs:
-#   https://pylint.readthedocs.io/en/latest/
-# - Configuration reference:
-#   http://pylint.pycqa.org/en/latest/technical_reference/features.html
-[tool.pylint.MASTER]
-# Work in parallel.
-# Parallel work disabled due to a bug in the pylint-django:
-# https://github.com/PyCQA/pylint-django/issues/276
-#jobs = "0"
-jobs = "1"
-# Disable Pylint-quotes until its issue is fixed:
-# https://github.com/edaniszewski/pylint-quotes/issues/29.
-## load-plugins = "pylint_quotes,pylint_django"
-load-plugins = "pylint_django"
-# Do not store results of previous runs.
-persistent = "no"
-# Allow to load C extension modules.
-unsafe-load-any-extension = "yes"
-[tool.pylint."MESSAGES CONTROL"]
-# design: Do not count lines, members, ..., no use.
-# similarities: Duplication does not mean bad design by itself.
-disable = "design,similarities"
-enable = "c-extension-no-member"
-[tool.pylint.BASIC]
-# It is OK to have 2-letters identifiers, e.g. 'id' or 'ok'. Also allow
-# long identifiers, cause there is a strong line length limitation which
-# will force engineers to thing twice before giving too long names.
-argument-rgx = "[a-z_][a-z0-9_]{1,64}$"
-attr-rgx = "[a-z_][a-z0-9_]{1,64}$"
-bad-names = "foo,bar,baz,toto,tutu,tata,responce,pathes"
-class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{1,64}|(__.*__))$"
-function-rgx = "[a-z_][a-z0-9_]{1,64}$"
-good-names = "i,j,k,ex,Run,_"
-method-rgx = "[a-z_][a-z0-9_]{1,64}$"
-# Docstrings are needed everywhere.
-no-docstring-rgx = "^$"
-variable-rgx = "[a-z_][a-z0-9_]{1,64}$"
-[tool.pylint.FORMAT]
-max-line-length = "88"
-max-module-lines = "9000" # Right, over nine thousand!
-[tool.pylint.STRING_QUOTES]
-docstring-quote = "double"
-string-quote = "double-avoid-escape"
-triple-quote = "double"
-[tool.pylint.PYLINT_DJANGO]
-# NOTE: When Pytest runs Pylint this setting is overwritten by the
-# environment variable `DJANGO_SETTINGS_MODULE` set by `pytest-django`.
-# Anyway, the setting is still useful when VS Code runs Pylint directly.
-django-settings-module = "example.settings"
-[tool.pylint.REFACTORING]
-# We have line length 88, no need to check.
-max-nested-blocks = "9000"
-[tool.pylint.REPORTS]
-reports = "no"
-score = "no"
+format = { quote-style = "single" }
+
+[tool.ruff.lint]
+select = [
+    "I", # isort
+    "S", # bandit
+    "F", # Pyflakes
+    "E", # pycodestyle
+    "B", # flake8-bugbear
+    "UP", # pyupgrade
+    "SIM", # flake8-simplify
+    "FA", # flake8-future-annotations
+    "RSE", # flake8-raise
+    "RET", # flake8-return
+    "FLY", # flynt
+    "DJ", # flake8-django
+    "PIE", # flake8-pie
+    "PLW", # pylint warnings
+    "PLE", # pylint errors
+    "TID", # flake8-tidy-imports
+    "FURB", # refurb
+    "C4", # flake8-comprehensions
+]
+
+ignore = [
+    "S101", # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
+    "F405", # X may be undefined, or defined from star imports Y
+    "B904", # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
+    "RET502", # Do not implicitly return None in function able to return non-None value
+    "RET503", # Missing explicit return at the end of function able to return non-None value
+    "RET504", # Unnecessary assignment to {name} before return statement
+]
+
+flake8-bandit = { }
+pyupgrade = { }
+
+[tool.ruff.lint.isort]
+case-sensitive = true
+combine-as-imports = true
+no-lines-before = ["local-folder"]
+relative-imports-order = "closest-to-furthest"
 
 # ------------------------------------------------------------- COVERAGE
 # Coverage.py configuration reference:
